--- a/main.html
+++ b/main.html
@@ -4,10 +4,10 @@
 
 <head>
 </head>
-
+<title> HTML Document Structure</title>
 <body>
 	<!-- PLease only edit this file for this asssignment. Thanks!-->
-	<h1>Hello </h1>
+	<h1>Hello  World</h1>
 </body>
 
 </html>
